[gd_scene load_steps=37 format=2]

[ext_resource path="res://Assets/bg.png" type="Texture" id=1]
[ext_resource path="res://Assets/HUD tools.png" type="Texture" id=2]
[ext_resource path="res://tanah1.gd" type="Script" id=3]
[ext_resource path="res://Assets/tanah kering 1.png" type="Texture" id=4]
[ext_resource path="res://Assets/jagung besar layu.png" type="Texture" id=5]
[ext_resource path="res://Assets/benih kering nw.png" type="Texture" id=6]
[ext_resource path="res://Assets/benih basah 1.png" type="Texture" id=7]
[ext_resource path="res://Assets/jagung besar kering.png" type="Texture" id=8]
[ext_resource path="res://Assets/jagung kecil kering kering.png" type="Texture" id=9]
[ext_resource path="res://Assets/jagung sedang kering nw.png" type="Texture" id=10]
[ext_resource path="res://Assets/benih kering 1.png" type="Texture" id=11]
[ext_resource path="res://Assets/jagung kecil kering layu NW.png" type="Texture" id=12]
[ext_resource path="res://Assets/jagung sedang kering layu NW.png" type="Texture" id=13]
[ext_resource path="res://Assets/jagung kecil kering 1.png" type="Texture" id=14]
[ext_resource path="res://Assets/jagung sedang kering layu.png" type="Texture" id=15]
[ext_resource path="res://Assets/jagung sedang kering kering.png" type="Texture" id=16]
[ext_resource path="res://Assets/jagung sedang kering kering NW.png" type="Texture" id=17]
[ext_resource path="res://Assets/jagung sedang kering 1.png" type="Texture" id=18]
[ext_resource path="res://Assets/jagung kecil kering layu.png" type="Texture" id=19]
[ext_resource path="res://Assets/jagung kecil kering nw.png" type="Texture" id=20]
[ext_resource path="res://Assets/jagung besar kering 1.png" type="Texture" id=21]
[ext_resource path="res://Assets/jagung kecil kering kering NW.png" type="Texture" id=22]
[ext_resource path="res://Assets/jagung kecil basah layu.png" type="Texture" id=23]
[ext_resource path="res://Assets/jagung sedang basah kering.png" type="Texture" id=24]
[ext_resource path="res://Assets/jagung sedang basah layu.png" type="Texture" id=25]
[ext_resource path="res://Assets/jagung sedang basah 1.png" type="Texture" id=26]
[ext_resource path="res://Assets/jagung kecil basah kering.png" type="Texture" id=27]
[ext_resource path="res://Assets/jagung kecil basah 1.png" type="Texture" id=28]
[ext_resource path="res://Assets/under.png" type="Texture" id=29]
[ext_resource path="res://Assets/over.png" type="Texture" id=30]
[ext_resource path="res://Assets/progress.png" type="Texture" id=31]
[ext_resource path="res://Tools.gd" type="Script" id=32]
[ext_resource path="res://Assets/benih.png" type="Texture" id=33]
[ext_resource path="res://Assets/siraman.png" type="Texture" id=34]
[ext_resource path="res://Assets/sabit.png" type="Texture" id=35]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Tanah",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Jagung Besar Layu",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Benih NW",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Benih Basah",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "Jagung Besar Kering",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "Jagung Kecil Kering",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "Jagung Sedang Normal NW",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "Benih",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "Jagung Kecil Layu NW",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "Jagung Sedang Layu NW",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "Jagung Kecil Normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "Jagung Sedang Layu",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "Jagung Sedang Kering",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "Jagung Sedang Kering NW",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "Jagung Sedang Normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "Jagung Kecil Layu",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "Jagung Kecil Normal NW",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "Jagung Besar Normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "Jagung Kecil Kering NW",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "Jagung Kecil Layu Basah",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "Jagung Sedang Kering Basah",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ) ],
"loop": true,
"name": "Jagung Sedang Layu Basah",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ) ],
"loop": true,
"name": "Jagung Sedang Normal Basah",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "Jagung Kecil Kering Basah",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ) ],
"loop": true,
"name": "Jagung Kecil Normal Basah",
"speed": 5.0
} ]

[node name="MainGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BG" type="Sprite" parent="."]
position = Vector2( 683.894, 383.98 )
texture = ExtResource( 1 )

[node name="HUD Tools" type="Sprite" parent="."]
position = Vector2( 74.9566, 345.059 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )

[node name="tanah1" type="Button" parent="."]
editor/display_folded = true
margin_left = 224.186
margin_top = 333.723
margin_right = 381.186
margin_bottom = 670.723
focus_mode = 0
flat = true
script = ExtResource( 3 )

[node name="Tanah" type="AnimatedSprite" parent="tanah1"]
position = Vector2( 79.3563, 169.777 )
frames = SubResource( 1 )
animation = "Tanah"

[node name="TumbuhTimer" type="Timer" parent="tanah1"]
wait_time = 0.01
one_shot = true

[node name="AirTimer" type="Timer" parent="tanah1"]
process_mode = 0

[node name="AirBar" type="TextureProgress" parent="tanah1"]
margin_left = -13.3
margin_top = 49.3999
margin_right = 26.7
margin_bottom = 261.4
rect_scale = Vector2( 0.7, 0.7 )
texture_under = ExtResource( 29 )
texture_over = ExtResource( 30 )
texture_progress = ExtResource( 31 )
fill_mode = 3

[node name="tanah2" type="Button" parent="."]
editor/display_folded = true
margin_left = 424.186
margin_top = 333.723
margin_right = 581.186
margin_bottom = 670.723
flat = true
script = ExtResource( 3 )

[node name="Tanah" type="AnimatedSprite" parent="tanah2"]
position = Vector2( 79.3563, 169.777 )
frames = SubResource( 1 )
animation = "Tanah"

[node name="TumbuhTimer" type="Timer" parent="tanah2"]
wait_time = 0.01
one_shot = true

[node name="AirTimer" type="Timer" parent="tanah2"]
process_mode = 0

[node name="AirBar" type="TextureProgress" parent="tanah2"]
margin_left = -13.3
margin_top = 49.3999
margin_right = 26.7
margin_bottom = 261.4
rect_scale = Vector2( 0.7, 0.7 )
texture_under = ExtResource( 29 )
texture_over = ExtResource( 30 )
texture_progress = ExtResource( 31 )
fill_mode = 3

[node name="tanah3" type="Button" parent="."]
editor/display_folded = true
margin_left = 624.186
margin_top = 333.723
margin_right = 781.186
margin_bottom = 670.723
flat = true
script = ExtResource( 3 )

[node name="Tanah" type="AnimatedSprite" parent="tanah3"]
position = Vector2( 79.3563, 169.777 )
frames = SubResource( 1 )
animation = "Tanah"

[node name="TumbuhTimer" type="Timer" parent="tanah3"]
wait_time = 0.01
one_shot = true

[node name="AirTimer" type="Timer" parent="tanah3"]
process_mode = 0

[node name="AirBar" type="TextureProgress" parent="tanah3"]
margin_left = -13.3
margin_top = 49.3999
margin_right = 26.7
margin_bottom = 261.4
rect_scale = Vector2( 0.7, 0.7 )
texture_under = ExtResource( 29 )
texture_over = ExtResource( 30 )
texture_progress = ExtResource( 31 )
fill_mode = 3

[node name="tanah4" type="Button" parent="."]
editor/display_folded = true
margin_left = 824.186
margin_top = 333.723
margin_right = 981.186
margin_bottom = 670.723
flat = true
script = ExtResource( 3 )

[node name="Tanah" type="AnimatedSprite" parent="tanah4"]
position = Vector2( 79.3563, 169.777 )
frames = SubResource( 1 )
animation = "Tanah"

[node name="TumbuhTimer" type="Timer" parent="tanah4"]
wait_time = 0.01
one_shot = true

[node name="AirTimer" type="Timer" parent="tanah4"]
process_mode = 0

[node name="AirBar" type="TextureProgress" parent="tanah4"]
margin_left = -13.3
margin_top = 49.3999
margin_right = 26.7
margin_bottom = 261.4
rect_scale = Vector2( 0.7, 0.7 )
texture_under = ExtResource( 29 )
texture_over = ExtResource( 30 )
texture_progress = ExtResource( 31 )
fill_mode = 3

[node name="tanah5" type="Button" parent="."]
editor/display_folded = true
margin_left = 1024.19
margin_top = 333.723
margin_right = 1181.19
margin_bottom = 670.723
flat = true
script = ExtResource( 3 )

[node name="Tanah" type="AnimatedSprite" parent="tanah5"]
position = Vector2( 79.3563, 169.777 )
frames = SubResource( 1 )
animation = "Tanah"

[node name="TumbuhTimer" type="Timer" parent="tanah5"]
wait_time = 0.01
one_shot = true

[node name="AirTimer" type="Timer" parent="tanah5"]
process_mode = 0

[node name="AirBar" type="TextureProgress" parent="tanah5"]
margin_left = -13.3
margin_top = 49.3999
margin_right = 26.7
margin_bottom = 261.4
rect_scale = Vector2( 0.7, 0.7 )
texture_under = ExtResource( 29 )
texture_over = ExtResource( 30 )
texture_progress = ExtResource( 31 )
fill_mode = 3

[node name="Tools" type="Node2D" parent="."]
script = ExtResource( 32 )

[node name="Bibit" type="Button" parent="Tools"]
margin_left = 17.1398
margin_top = 186.413
margin_right = 88.1398
margin_bottom = 276.413
focus_mode = 0
flat = true

[node name="bibit" type="Sprite" parent="Tools/Bibit"]
position = Vector2( 33.4572, 46.0971 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 33 )

[node name="Siraman" type="Button" parent="Tools"]
margin_left = 5.46631
margin_top = 299.35
margin_right = 104.466
margin_bottom = 376.35
focus_mode = 0
flat = true

[node name="siraman" type="Sprite" parent="Tools/Siraman"]
position = Vector2( 47.9238, 42.6409 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 34 )

[node name="Sabit" type="Button" parent="Tools"]
margin_left = 8.43994
margin_top = 402.938
margin_right = 101.44
margin_bottom = 502.938
focus_mode = 0
flat = true

[node name="sabit" type="Sprite" parent="Tools/Sabit"]
position = Vector2( 49.4333, 49.056 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 35 )
[connection signal="pressed" from="tanah1" to="tanah1" method="_on_tanah1_pressed"]
[connection signal="timeout" from="tanah1/TumbuhTimer" to="tanah1" method="_on_TumbuhTimer_timeout"]
[connection signal="timeout" from="tanah1/AirTimer" to="tanah1" method="_on_AirTimer_timeout"]
[connection signal="pressed" from="tanah2" to="tanah2" method="_on_tanah1_pressed"]
[connection signal="timeout" from="tanah2/TumbuhTimer" to="tanah2" method="_on_TumbuhTimer_timeout"]
[connection signal="timeout" from="tanah2/AirTimer" to="tanah2" method="_on_AirTimer_timeout"]
[connection signal="pressed" from="tanah3" to="tanah3" method="_on_tanah1_pressed"]
[connection signal="timeout" from="tanah3/TumbuhTimer" to="tanah3" method="_on_TumbuhTimer_timeout"]
[connection signal="timeout" from="tanah3/AirTimer" to="tanah3" method="_on_AirTimer_timeout"]
[connection signal="pressed" from="tanah4" to="tanah4" method="_on_tanah1_pressed"]
[connection signal="timeout" from="tanah4/TumbuhTimer" to="tanah4" method="_on_TumbuhTimer_timeout"]
[connection signal="timeout" from="tanah4/AirTimer" to="tanah4" method="_on_AirTimer_timeout"]
[connection signal="pressed" from="tanah5" to="tanah5" method="_on_tanah1_pressed"]
[connection signal="timeout" from="tanah5/TumbuhTimer" to="tanah5" method="_on_TumbuhTimer_timeout"]
[connection signal="timeout" from="tanah5/AirTimer" to="tanah5" method="_on_AirTimer_timeout"]
[connection signal="pressed" from="Tools/Bibit" to="Tools" method="_on_Bibit_pressed"]
[connection signal="pressed" from="Tools/Siraman" to="Tools" method="_on_Siraman_pressed"]
[connection signal="pressed" from="Tools/Sabit" to="Tools" method="_on_Sabit_pressed"]
